uat-cee-3/manifests/dealdetail-react-app/dealdetail-react-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: infin8v2-dealdetail-react-app
  name: infin8v2-dealdetail-react-app
  namespace: 'uat-cee-3'
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infin8v2-dealdetail-react-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: infin8v2-dealdetail-react-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: infin8v2-dealdetail-react-app
              topologyKey: kubernetes.io/hostname
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: infin8v2-dealdetail-react-app
                topologyKey: topology.kubernetes.io/zone
      containers:
        - env:            
            - name: BASE_URL
              valueFrom:
                configMapKeyRef:
                  key: BASE_URL
                  name: infin8v2-config-dealdetail-map
          image: '577638400901.dkr.ecr.us-east-1.amazonaws.com/infini8v2-rt-dev:infin8v2-dealdetail-app-00.05.75'
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - '60'
          name: infin8v2-dealdetail-react-app
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 512Mi
            requests:
              cpu: 50m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 0
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 65
---
apiVersion: v1
kind: Service
metadata:
  namespace: 'uat-cee-3'
  labels:
    name: infin8v2-dealdetail-react-app-service
  name: infin8v2-dealdetail-react-app-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: infin8v2-dealdetail-react-app
